Updated ansible mock and logs.
